--- a/resources/sass/blocks/_footer-subscribe.sass
+++ b/resources/sass/blocks/_footer-subscribe.sass
@@ -16,6 +16,9 @@
 .footer-subscribe .subscribe-form
   +fluid-type(32px, 46px, 'margin-top')
   min-width: 320px
+  +mediaSize($mobile)
+    min-width: 0
+    width: 100%
 
 .subscribe-form
   position: relative
