--- a/resources/sass/sections/_hero.sass
+++ b/resources/sass/sections/_hero.sass
@@ -1,7 +1,7 @@
 .hero__content
   +fluid-type(44px, 80px, 'margin-top')
 
-.hero
+.hero:not(.hero-texted)
   display: grid
   grid-template-columns: minmax(200px, 640px) minmax(300px, 1fr)
   +mediaSize($small-tablet)
