--- a/resources/sass/cards/_what-is-card.sass
+++ b/resources/sass/cards/_what-is-card.sass
@@ -19,6 +19,7 @@
   display: flex
   justify-content: center
   align-items: center
+  pointer-events: none
 
 .what-is-card__image img
   +fluid-type(105px, 150px, 'max-height')
