--- a/resources/sass/_default.sass
+++ b/resources/sass/_default.sass
@@ -271,7 +271,7 @@ section + section
   scroll-snap-type: x mandatory
   -webkit-overflow-scrolling: touch
   white-space: nowrap
-  overflow-x: scroll
+  overflow: scroll
   scroll-behavior: smooth
   +mediaSize($tablet)
     width: calc(100% + #{$default-gap * 2})
