--- a/resources/sass/sections/_discover-web3.sass
+++ b/resources/sass/sections/_discover-web3.sass
@@ -12,3 +12,11 @@
 
 .discover-web3__content .ordered-list .why-get-tile
   margin-top: 20px
+
+.discover-web3__illustration
+  margin-top: 36px
+  +mediaSize($small-tablet)
+    display: none
+
+.discover-web3__illustration .person
+  animation: floating-person 10s infinite linear alternate
