--- a/resources/sass/blocks/_notepad.sass
+++ b/resources/sass/blocks/_notepad.sass
@@ -115,3 +115,35 @@
 .notepad__page-description
   +fluid-type(12px, 32px, 'margin-top')
   +fluid-type(16px, 18px)
+
+.notepad-slides
+  height: 100%
+  display: flex
+  flex-direction: column
+
+.notepad-slides__controls
+  margin-top: auto
+  display: flex
+  justify-content: space-between
+  gap: 36px
+  +mediaSize($mobile)
+    flex-direction: column
+    align-items: flex-start
+    gap: 16px
+
+.notepad-slides__controls > button
+  flex-grow: 1
+  flex-basis: 50%
+  +mediaSize($mobile)
+    width: 100%
+
+
+.notepad-slide:not(.notepad-slide--initial) h2,
+.notepad-slide:not(.notepad-slide--initial) .content p
+  visibility: hidden
+
+.notepad-slide:not(.notepad-slide--initial)
+  display: none
+
+.notepad-slides__listing
+  margin-bottom: 24px
