--- a/resources/sass/includes/_button.sass
+++ b/resources/sass/includes/_button.sass
@@ -134,7 +134,21 @@
   transition: transform .2s ease, box-shadow .2s ease
   box-shadow: 0 4px 0 #0D5257
 
-.btn-key:hover
+.btn-key .icon
+  width: 2.25em
+  height: 2.25em
+  flex-shrink: 0
+
+.btn-key .icon--left
+  margin-right: 8px
+
+.btn-key .icon img
+  width: 100%
+  height: 100%
+  object-fit: cover
+
+.btn-key:hover,
+.btn-key:focus
   transform: translateY(4px)
   box-shadow: none
 
@@ -145,11 +159,24 @@
   margin-right: 12px
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25))
 
+.btn-key--grey
+  background-color: #54565C
+  box-shadow: 0 4px 0 #353945
+  color: white
+
 .btn-key--orange
   background-color: $orange
   color: white
   box-shadow: 0 4px 0 #AC5A4C
 
+.btn-key--blue
+  background-color: $bright-blue
+  box-shadow: 0 4px 0 #1868B7
+  color: white
+
 .btn-key--green
   background-color: $green
   color: black
+
+.btn-key--green--c-white
+  color: white
