--- a/resources/sass/_default.sass
+++ b/resources/sass/_default.sass
@@ -322,3 +322,6 @@ section + section
     opacity: .99
   20%, 21.999%, 63%, 63.999%, 65%, 69.999%
     opacity: 0.4
+
+section:not(.section--visible) *
+  animation-play-state: paused!important
