--- a/resources/sass/generic/_header.sass
+++ b/resources/sass/generic/_header.sass
@@ -142,3 +142,7 @@ header:not(.header-simple) .header__cta
 
 .header-simple .header__cta
   margin-right: 0
+
+header:not(.header-simple) .header-inner > .typeform
+  +mediaSize($tablet)
+    display: none
