--- a/resources/sass/sections/_faq-section.sass
+++ b/resources/sass/sections/_faq-section.sass
@@ -20,6 +20,10 @@
   position: absolute
   left: 0
   top: 0
+  width: 100%
+
+.faq__decor__inner svg
+  width: 100%
 
 .faq__decor
   position: relative
