--- a/resources/sass/_default.sass
+++ b/resources/sass/_default.sass
@@ -14,6 +14,7 @@ html:before
   background-size: cover
   pointer-events: none
   z-index: -100
+  scroll-behavior: smooth
 
 html, body
   font-family: $lexend-font
