changes from live-site

--- a/resources/sass/generic/_header.sass
+++ b/resources/sass/generic/_header.sass
@@ -43,8 +43,8 @@ header:not(.header-simple):before
     border-bottom: 0
 
 .header__logo
-  width: 136px
-  height: 36px
+  width: 150px
+  height: auto
 
 .header__logo img
   object-fit: contain
