Mint page changes

--- a/resources/sass/blocks/_nft-calculator.sass
+++ b/resources/sass/blocks/_nft-calculator.sass
@@ -31,14 +31,14 @@
 .nft-calculator__body
   flex-grow: 1
   border-left: 2px solid $border-color
-  border-right: 2px solid $border-color
+  //border-right: 2px solid $border-color
   display: flex
   align-items: center
   +mediaSize($tablet)
     border-left: 0
     border-right: 0
     border-top: 2px solid $border-color
-    border-bottom: 2px solid $border-color
+    //border-bottom: 2px solid $border-color
 
 .nft-calculator__slider,
 .nft-calculator__slider .noUi-handle
