--- a/resources/sass/blocks/_notepad.sass
+++ b/resources/sass/blocks/_notepad.sass
@@ -121,7 +121,8 @@
   display: flex
   flex-direction: column
 
-.notepad-slides__controls
+.notepad-slides__controls,
+.notepad-slides__final-actions
   margin-top: auto
   display: flex
   justify-content: space-between
@@ -147,3 +148,21 @@
 
 .notepad-slides__listing
   margin-bottom: 24px
+
+.notepad-slides .btn-final
+  width: 100%
+  display: none
+
+.notepad-slides.first-slide .btn-prev
+  display: none
+
+.notepad-slides.last-slide .btn-next
+  display: none
+
+.notepad-slides.last-slide .btn-final
+  display: inline-block
+
+.notepad-slides.last-slide .notepad-slides__controls
+  flex-direction: column
+  align-items: center
+  gap: 20px
