Pull request: Styles for text pages

--- a/resources/sass/app.sass
+++ b/resources/sass/app.sass
@@ -17,6 +17,7 @@
 @import "generic/mobile-menu"
 @import "generic/swal"
 @import "generic/footer-simple"
+@import "generic/editor-content"
 
 //SECTIONS
 @import "sections/hero"
