--- a/resources/sass/generic/_footer.sass
+++ b/resources/sass/generic/_footer.sass
@@ -10,6 +10,7 @@ footer
   +fluid-type(20px, 32px, 'padding-top')
   +fluid-type(20px, 32px, 'padding-bottom')
   border-top: 2px solid $border-color
+  gap: 10px
 
 .footer__bottom
   +fluid-type(32px, 80px, 'margin-top')
