Mint page changes

--- a/resources/sass/app.sass
+++ b/resources/sass/app.sass
@@ -46,6 +46,7 @@
 @import "blocks/get-in-touch-form"
 @import "blocks/nft-generator"
 @import "blocks/nft-calculator"
+@import "blocks/progress-bar"
 
 //TILES
 @import "tiles/why-get-tile"
