--- a/resources/sass/generic/_header.sass
+++ b/resources/sass/generic/_header.sass
@@ -118,19 +118,19 @@ header:not(.header-simple) .header__cta
 .header__cta:focus .icon
   color: white
 
-.header-simple .header__logo
-  +fluid-type(125px, 204px, 'width')
-  +fluid-type(33px, 63px, 'height')
-  margin-right: 10px
-
-.header-simple .header__logo .desktop-logo
-  +mediaSize($mobile)
-    display: none
-
-.header-simple .header__logo .mobile-logo
-  display: none
-  +mediaSize($mobile)
-    display: flex
+//.header-simple .header__logo
+//  +fluid-type(125px, 204px, 'width')
+//  +fluid-type(33px, 63px, 'height')
+//  margin-right: 10px
+//
+//.header-simple .header__logo .desktop-logo
+//  +mediaSize($mobile)
+//    display: none
+//
+//.header-simple .header__logo .mobile-logo
+//  display: none
+//  +mediaSize($mobile)
+//    display: flex
 
 .header-simple .header__cta .btn-key
   +mediaSize($mobile)
