--- a/resources/sass/blocks/_notepad.sass
+++ b/resources/sass/blocks/_notepad.sass
@@ -175,3 +175,15 @@
   flex-direction: column
   align-items: center
   gap: 20px
+
+.notepad-slides.last-slide .btn-prev
+  padding: 0
+  box-shadow: none
+  background: none
+  color: $text-color
+  transition: color .2s ease
+
+.notepad-slides.last-slide .btn-prev:hover,
+.notepad-slides.last-slide .btn-prev:focus
+  transform: none
+  color: $green
